# TreeAction

./: .gitignore  .gitmodules  README.md  action_interface_spec.md  design.md  梅林区BT参数接口确认.md  梅林区BehaviorTree实现方案.md  梅林区路径规划.md
ares_tool_control/: CMakeLists.txt  package.xml
ares_tool_control/include/ares_tool_control/: ares_usb.hpp
ares_tool_control/launch/: tool_node.launch.py
ares_tool_control/src/: ares_usb.cpp  tool_node.cpp
ares_usb/src/: usb_bridge_node.cpp
docs/: R2全场机器人约束与规则约束整理.md  action_interface_spec.md  梅林区BehaviorTree实现方案.md
image/: cam_in_ex.txt
place_kfs/: package.xml  setup.cfg  setup.py
place_kfs/launch/: place_kfs.launch.py
place_kfs/place_kfs/: place_kfs_action_server.py
r2_bringup/: package.xml
r2_bringup/launch/: r2_autonomy.launch.py  r2_capacity_1.launch.py  r2_full.launch.py  r2_meilin.launch.py  r2_meilin_sim.launch.py  r2_sim.launch.py
r2_bt/: CMakeLists.txt  package.xml
r2_bt/config/: match_blue.json  match_red.json  param.yaml  param_blue.yaml  param_red.yaml
r2_bt/include/r2_bt/: final_waypoint.hpp  segment.hpp
r2_bt/include/r2_bt/nodes/actions/: align.hpp  ares_tool_action.hpp  go_to_pose.hpp  initial_place_kfs.hpp  meilin_fetch.hpp  meilin_move.hpp  meilin_move_plan.hpp  move_through_final_waypoints.hpp  move_to_pose.hpp  pick_action.hpp  place_kfs_action.hpp  place_object_placeholder.hpp  pop_next_meilin_segment.hpp  publish_chassis_height.hpp  select_final_target.hpp  step_motion_control.hpp  wait_for_int_signal.hpp  wait_seconds.hpp
r2_bt/include/r2_bt/nodes/conditions/: wait_for_r1_signal.hpp
r2_bt/include/r2_bt/nodes/controls/: switch_segment_type.hpp
r2_bt/include/r2_bt/nodes/decorators/: for_each_segment.hpp
r2_bt/launch/: bt_engine.launch.py  meilin_stage.launch.py
r2_bt/src/: bt_engine_node.cpp
r2_bt/src/nodes/: align.cpp  ares_tool_action.cpp  for_each_segment.cpp  go_to_pose.cpp  initial_place_kfs.cpp  meilin_fetch.cpp  meilin_move.cpp  meilin_move_plan.cpp  move_through_final_waypoints.cpp  move_to_pose.cpp  pick_action.cpp  place_kfs_action.cpp  place_object_placeholder.cpp  pop_next_meilin_segment.cpp  pop_next_segment.cpp  publish_chassis_height.cpp  select_final_target.cpp  step_motion_control.cpp  suspension_control.cpp  switch_segment_type.cpp  wait_arm_idle.cpp  wait_for_int_signal.cpp  wait_for_r1_signal.cpp  wait_seconds.cpp
r2_bt/trees/: capacity_1.xml  final_area.xml  full_match.xml  meilin_stage.xml  prepare_area.xml
r2_hardware/: package.xml  setup.py
r2_hardware/launch/: step_motion_test.launch.py
r2_hardware/r2_hardware/: pid_controller.py
r2_hardware/r2_hardware/action_servers/: arm_action_server.py  motion_action_server.py  move_to_pose_server.py  spear_action_server.py  step_motion_action_server.py  suspension_action_server.py
r2_hardware/r2_hardware/topic_nodes/: odom_simulator.py
r2_interfaces/: CMakeLists.txt  package.xml
r2_interfaces/action/: Align.action  ArmAction.action  GoToPose.action  MoveToPose.action  StepMotionControl.action
r2_interfaces/srv/: GetActionSeq.srv  StartAutonomy.srv  ToolAction.srv
r2_planner/: setup.py
