<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ares_tool_control</name>
  <version>0.1.0</version>
  <description>ROS2 node exposing a service to control the ARES R2 tool arm/connector over USB.</description>
  <maintainer email="N2504203H@e.ntu.edu.sg">EclipseaHime017</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>r2_interfaces</depend>

  <depend>libusb-1.0</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
