<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>r2_bringup</name>
  <version>0.1.0</version>
  <description>R2 full-system bringup — launch files and configuration</description>
  <maintainer email="dev@r2.local">R2 Team</maintainer>
  <license>Apache-2.0</license>

  <depend>r2_bt</depend>
  <depend>r2_hardware</depend>
  <depend>action_of_motion</depend>
  <depend>ares_tool_control</depend>
  <depend>ares_usb</depend>
  <depend>multi_serial_sensor</depend>
  <depend>mf_action_planner</depend>
  <depend>coordinate_transformer</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
