<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>r2_bt</name>
  <version>0.1.0</version>
  <description>R2 Behavior Tree decision layer — pure logic, no hardware control</description>
  <maintainer email="dev@r2.local">R2 Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>behaviortree_cpp</depend>
  <depend>r2_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nlohmann_json</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
